@@ -332,7 +332,7 @@ public class ExtSyntaxSupport extends SyntaxSupport {
     }
 
     public Map getLocalVariableMap(int offset) {
-        Integer posI = new Integer(offset);
+        Integer posI = Integer.valueOf(offset);
         Map varMap = (Map)localVarMaps.get(posI);
         if (varMap == null) {
             varMap = buildLocalVariableMap(offset);
@@ -356,7 +356,7 @@ public class ExtSyntaxSupport extends SyntaxSupport {
     }
 
     public Map getGlobalVariableMap(int offset) {
-        Integer posI = new Integer(offset);
+        Integer posI = Integer.valueOf(offset);
         Map varMap = (Map)globalVarMaps.get(posI);
         if (varMap == null) {
             varMap = buildGlobalVariableMap(offset);
